# OS_PROJECT_S2

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile_python  HOST  Makefile  README.md  client.py  ftp_mqtt  ftp_mqtt.py  tester.py  tester_answers.py
host/: __init__.py
host/ftp_mqtt/: __init__.py
host/ftp_mqtt/socket/: __init__.py
interpreter/: __init__.py
lib/: __init__.py
lib/minixfs/: __init__.py  bloc_device.py  minix_inode.py  minix_superbloc.py  minix_superblock.py  minixfs.py
src/: cmd_interpreter.c  cmd_interpreter.h  file_access.c  file_access.h  file_opener.c  file_opener.h  get_reply.c  get_reply.h  get_request.c  get_request.h  main.c  onlineClient.c  reply.c  reply.h  request.c  request.h  server.c  server.h  socket.c  socket.h  stdin_filter.c  stdin_filter.h  utils.c  utils.h
structure/: __init__.py
